kubernetes-deployment/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-test-service
  annotations:
    "aminmithil.test.io/allow-loadbalancer": "false"
spec:
  ports:
  - port: 8081
    protocol: TCP
  selector:
    app: hello-wolrd-test
  type: LoadBalancer
