kubernetes-deployment/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-example-cfg
  labels:
    app: admission-webhook-example
webhooks:
  - name: mutating-example.aminmithil.com
    clientConfig:
      service:
        name: admission-webhook-example-svc
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01ESXhNVEU0TVRFek5sb1hEVE13TURJd09ERTRNVEV6Tmxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTFEwCm96V1FUNnZFSEZrT052QkcwMjMrdUkxdytGUlhsLzJlejZPSFhjdHl6THBEREYxUkdScGVJVk1DL3BscXVxY1YKWjNlUUk5aE51N2p3YjNKcXlqcjh2S3Q1MHJQZ0l3QWdpMjlWTmpaRmZ5bFVjZzVJQzRReTNhWXhlbzFSK2d5WQp3L0oxaUtWNVZO [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["services"]
